--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=demoContract
+
+# Swagger/OpenAPI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui/index.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.syntax-highlight.activated=true
+
+# Set the default URL to redirect to Swagger UI
+springdoc.swagger-ui.default-model-expand-depth=1
+
+# Configure API docs
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.disable-swagger-default-url=false
+springdoc.swagger-ui.config-url=/api-docs/swagger-config
+springdoc.swagger-ui.url=/api-docs
